<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/title_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_listar_manutencao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="19dp"
        android:onClick="btnListarManutencao"
        android:text="@string/btn_listar_manutencao" />

    <Button
        android:id="@+id/btn_agendar_manutencao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_listar_manutencao"
        android:layout_alignStart="@+id/btn_listar_manutencao"
        android:layout_below="@+id/btn_listar_manutencao"
        android:text="@string/btn_agendar_manutencao" />

</RelativeLayout>
